# KyroDB

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_PRACTICES_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INTEGRATION_TESTING_COMPLETE.md  LICENSE  LOAD_TEST_RESULTS.md  README-SHORT.md  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  azure_complete_setup.sh  bench_latency.csv  bench_quick.csv  bench_results.csv  benchmark_optimization_test.py  comp.py  config.example.toml  config.example.yaml  config.pilot.api_keys.example.yaml  config.pilot.toml  config.pilot.yaml  debug_test.rs  docker-compose.vm.yml  docker-compose.yaml  docker-compose.yml  enterprise_test.rs  experimental.md  install.sh  kyrodb_config.toml  kyrodb_config_images.toml  metrics_before.prom  openapi.yaml  package-lock.json  package.json  phase1_simd_validation.rs  (+9 more)
bench/: Cargo.toml  README.bench.md  README.md  azure_benchmark_run.sh  benchmark_env.sh  build.rs  compare_results.sh  rmi_vs_btree_data.csv  run_complete_suite.sh  run_quick_benchmark.sh  run_simd_validation.sh  verify_simd_fix.sh
bench/benches/: kv_index.rs
bench/scripts/: capture.sh  comprehensive_benchmark.sh  generate_plot.py  generate_plots.py  run_large_benchmarks.sh
bench/src/: client.rs  grpc_bench.rs  grpc_client.rs  lib.rs  main.rs  ultra_fast_client.rs
bench/src/client/: http.rs  mod.rs  ultra_fast.rs
bench/src/metrics/: mod.rs  reporter.rs
bench/src/runner/: executor.rs  mod.rs  warmup.rs
bench/src/workload/: generator.rs  mod.rs  patterns.rs
engine/: Cargo.toml  Cargo_hash_test.toml  build.rs  stress_test.sh
engine/benches/: access_logger.rs  btree_vs_rmi_proof.rs  cache_operations.rs  hnsw_knn.rs  index_comparison.rs  learned_cache.rs  persistence.rs  raw_index_scale.rs  rmi_rebuild.rs  snapshot_performance.rs  wal_throughput.rs
engine/examples/: adaptive_rmi_advanced_demo.rs  adaptive_rmi_demo.rs  background_maintenance_cpu_spin_test.rs  background_operations_stress_test.rs  binary_protocol_integration_test.rs  bounded_search_stress_test.rs  comprehensive_background_maintenance_test.rs  concurrency_test.rs  concurrent_benchmark.rs  enterprise_test.rs  final_validation_test.py  group_commit_benchmark.rs  high_concurrency_benchmark.rs  hot_buffer_race_condition_fix_validation.rs  lock_free_rmi_validation.rs  lock_ordering_validation.rs  memory_fast_path_benchmark.rs  memory_leak_deadlock_validation.py  memory_management_validation.rs  performance_test.py  phase0_concurrency_test.rs  phase0_memory_test.rs  phase0_rmi_test.rs  phase1_simd_validation.rs  phase2_neon_validation.rs  phase3_advanced_simd_validation.rs  phase3_buffer_pool_demo.rs  phase4_cache_prefetch_memory_validation.rs  phase4_optimization_validation.rs  phase4_simd_demo.rs  phase4_simplified_validation.rs  race_free_lookup_verification.rs  simd_misconceptions_fix_validation.rs  simd_runtime_detection_validation.rs  simple_background_termination_test.rs  simple_bounded_search_test.rs  simple_fixes_validation.py  simple_robust_background_test.rs  test_batch_lookup.py  test_config_validation.py  (+5 more)
engine/fuzz/: Cargo.toml  README.md
engine/fuzz/fuzz_targets/: api_validation_surface.rs  auth_surface.rs  fuzz_target_1.rs  rmi_probe.rs  tenant_surface.rs
engine/proto/: kyrodb.proto
engine/src/: ab_stats.rs  access_logger.rs  access_logger_old.rs  adaptive_admission.rs  adaptive_oversampling.rs  adaptive_rmi.rs  ann_backend.rs  ann_quant.rs  api_validation.rs  auth.rs  backup.rs  binary_protocol.rs  cache_strategy.rs  circuit_breaker.rs  coherence.rs  concurrency.rs  config.rs  ffi_ann.rs  grpc_svc.rs  hnsw_backend.rs  hnsw_index.rs  hot_tier.rs  index.rs  learned_cache.rs  learned_predictor_core.rs  lib.rs  lru_index.rs  main.rs  memory.rs  memory_profiler.rs  metadata_filter.rs  metrics.rs  ndcg.rs  persistence.rs  prefetch.rs  query_clustering.rs  query_hash_cache.rs  rate_limiter.rs  rmi_config.rs  rmi_core.rs  (+10 more)
engine/src/hybrid/: mod.rs
engine/src/metadata/: mod.rs
engine/src/test/: background_worker_test.rs  build_rmi_sync_test.rs  lookup_path_test.rs  mod.rs  test_auto_warmup.sh
engine/src/test/background/: graceful_shutdown.rs  maintenance_tasks.rs  mod.rs
engine/src/test/concurrency/: deadlock_detection.rs  mod.rs  race_conditions.rs
engine/src/test/integration/: http_endpoints.rs  mod.rs  ultra_fast_endpoints.rs
engine/src/test/memory/: buffer_management.rs  cache_coherency.rs  leak_detection.rs  memory_limits.rs  mod.rs
engine/src/test/rmi/: bounded_search.rs  index_accuracy.rs  mod.rs  rebuild_atomicity.rs  segment_adaptation.rs
engine/src/test/simd/: mod.rs
engine/src/test/snapshot/: atomicity.rs  creation.rs  debug_data_loss.rs  debug_group_commit.rs  debug_group_commit_config.rs  debug_payload.rs  debug_rmi_vs_btree.rs  debug_snapshot.rs  mod.rs  recovery.rs  (+1 more)
engine/src/text/: mod.rs
engine/src/vector/: distance.rs  hnsw.rs  mod.rs  storage.rs
engine/tests/: ab_test_integration.rs  access_logger_integration.rs  background_compaction.rs  backup_hardening_tests.rs  backup_safeguards.rs  batch_delete.rs  bug_fixes_validation.rs  bulk_operations.rs  cache_and_compaction_regression.rs  chaos_recovery.rs  cli_integration_tests.rs  compact_triggers.rs  cpu_throttling_protection.rs  crash_recovery_property_tests.rs  debug_lookup.rs  debug_race_conditions.rs  debug_segment_search.rs  enterprise_safe.rs  failpoints_recovery.rs  fast_lookup_chaos.rs  fsync_injection.rs  grpc_end_to_end.rs  hnsw_tests.proptest-regressions  hnsw_tests.rs  http_compact_endpoint.rs  http_integration.rs  idempotent_append_restart.rs  kv_lookup.rs  learned_predictor_core_tests.rs  linear_search_fix_validation.rs  loom_concurrency_tests.rs  loom_rmi_concurrency.rs  loom_snapshot_manifest.rs  memory_management_fix_validation.rs  memory_management_stress_test.rs  memory_management_validation.rs  metadata_filtering_integration.rs  metric_distance_consistency.rs  mixed_workload_stress.rs  monotonic_offset_compaction.rs  (+27 more)
simple_bench/: Cargo.toml  build.rs  grpc_bench.rs  grpc_client.rs  http_bench.rs  kyrodb.proto
(+136 files in other folders)
