[workspace]
resolver = "2"
members = [
    "engine",
    "bench",
]
exclude = [
    "engine/fuzz",
]

[workspace.dependencies]
tempfile = "3"

[workspace.metadata]
# to run with: cargo test -q --features engine/http-test

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KyroDB Team <kishanvats2003@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/vatskishan03/KyroDB"
keywords = ["database", "kv", "learned-index", "rmi", "vector-search"]
categories = ["database-implementations", "data-structures"]
description = "KyroDB: A high-performance, durable key-value database with learned indexes (RMI) and vector search capabilities"