[workspace]
resolver = "2"
members = [
    "engine",
    "bench",
]
exclude = [
    "engine/fuzz",
]

[workspace.dependencies]
tempfile = "3"

[workspace.metadata]
# to run with: cargo test -q --features engine/http-test

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KyroDB Team <kishan@kyrodb.com>"]
license = "BUSL-1.1"
repository = "https://github.com/vatskishan03/KyroDB"
keywords = ["database", "kv", "learned-index", "rmi", "performance"]
categories = ["database-implementations", "data-structures"]
description = "KyroDB: A high-performance, durable key-value database with learned indexes (RMI)"