[workspace]
resolver = "2"
members = [
    "engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KyroDB Team <kishan@kyrodb.com>"]
license = "BSL"
repository = "https://github.com/vatskishan03/KyroDB"
keywords = ["vector-database", "hnsw", "hybrid-semantic-cache", "rag", "embeddings"]
categories = ["database-implementations", "machine-learning"]
description = "KyroDB: High-performance vector database for RAG workloads with Hybrid Semantic Cache"