[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
kyrodb_engine = { package = "kyrodb-engine", path = "../engine", features = ["learned-index"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
criterion = { version = "0.5" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# Core dependencies for HTTP benchmarking
rand = "0.8"
rand_distr = "0.4"
hdrhistogram = "7"
serde_json = "1"
futures = "0.3"
base64 = "0.21"
anyhow = "1"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1"  # MessagePack support for bench client

[build-dependencies]
# No build dependencies needed for HTTP-only benchmarking

[[bench]]
name = "kv_index"
harness = false


