[package]
name = "kyrodb-engine"
version = "0.1.0"
edition = "2021"
authors = ["KyroDB Team <kishan@kyrodb.com>"]
license = "BSL"
description = "High-performance vector database for RAG workloads"
repository = "https://github.com/vatskishan03/KyroDB"
readme = "../README.md"
keywords = ["vector-database", "hnsw", "hybrid-semantic-cache", "rag", "embeddings"]
categories = ["database-implementations", "machine-learning"]

[lib]
name = "kyrodb_engine"
path = "src/lib.rs"

[features]
default = []
# Phase 0 Week 3-8: Enable Hybrid Semantic Cache with RMI
hybrid-cache = []
# Benchmarking: disable metrics for zero-overhead measurements
bench-no-metrics = []
# Memory profiling: jemalloc allocator with profiling support
jemalloc-profiling = ["tikv-jemallocator", "tikv-jemalloc-ctl"]

[dependencies]
# Phase 0 Week 1-2: HNSW vector search
hnsw_rs = "0.3"
anyhow = "1.0"

# Phase 0 Week 3-8: RMI for Hybrid Semantic Cache (no external deps, pure Rust)

# Phase 0 Week 9-12: A/B testing framework + minimal persistence
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "fs", "io-util", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
parking_lot = "0.12"  # Fast RwLock for cache
rand = "0.8"  # For Zipf distribution sampling
rand_chacha = "0.3"  # Deterministic per-doc embeddings
rand_distr = "0.4"  # Gaussian noise for semantic clusters
zipf = "7.0"  # Proper Zipf distribution for validation tests
rayon = "1.10"  # Phase 0.5.2: Parallel doc-to-queries map building

# Phase 0 Week 17+: gRPC server for production deployment
# tonic 0.10 requires prost 0.12 (must match versions)
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
tracing-appender = "0.2"

# Persistence: WAL + snapshots
bincode = "1.3"
crc32fast = "1.4"
memmap2 = "0.9"

# Memory profiling: jemalloc allocator with profiling support (optional)
tikv-jemallocator = { version = "0.6", optional = true, features = ["profiling", "stats"] }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["use_std", "stats"] }

# Lock-free ring buffer: ringbuf crate (replaces custom RingBuffer)
ringbuf = "0.4"

[dev-dependencies]
# Phase 0 Week 1-2: Testing HNSW recall guarantees
proptest = "1.0"
tempfile = "3.8"  # For testing file persistence

[[bench]]
name = "hnsw_knn"
harness = false

[[bench]]
name = "learned_cache"
harness = false

[[bench]]
name = "access_logger"
harness = false

[[bench]]
name = "cache_operations"
harness = false

[[bench]]
name = "persistence"
harness = false

[dependencies.criterion]
version = "0.5"
optional = true

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[build-dependencies]
# gRPC: Protobuf compilation
tonic-build = "0.10"

[package.metadata.docs.rs]
features = ["learned-index"]
