[package]
name = "kyrodb-engine"
version = "0.1.0"
edition = "2021"
authors = ["KyroDB Team <kishan@kyrodb.com>"]
license = "BSL"
description = "High-performance vector database for RAG workloads"
repository = "https://github.com/vatskishan03/KyroDB"
readme = "../README.md"
keywords = ["vector-database", "hnsw", "hybrid-semantic-cache", "rag", "embeddings"]
categories = ["database-implementations", "machine-learning"]

[lib]
name = "kyrodb_engine"
path = "src/lib.rs"

[features]
default = []
# Phase 0 Week 3-8: Enable Hybrid Semantic Cache with RMI
hybrid-cache = []
# Benchmarking: disable metrics for zero-overhead measurements
bench-no-metrics = []
# Memory profiling: jemalloc allocator with profiling support
jemalloc-profiling = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
# CLI tools: Optional progress bars and table formatting
cli-tools = ["indicatif", "tabled", "env_logger"]
# S3 backup: Optional AWS S3 integration for remote backups
s3-backup = ["aws-config", "aws-sdk-s3"]

[dependencies]
# Phase 0 Week 1-2: HNSW vector search
hnsw_rs = "0.3"
anyhow = "1.0"

# Phase 0 Week 3-8: RMI for Hybrid Semantic Cache (no external deps, pure Rust)

# Phase 0 Week 9-12: A/B testing framework + minimal persistence
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "fs", "io-util", "signal", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }  # Fast RwLock for cache + deadlock detection in debug builds
rand = "0.8"  # For Zipf distribution sampling
rand_chacha = "0.3"  # Deterministic per-doc embeddings
rand_distr = "0.4"  # Gaussian noise for semantic clusters
zipf = "7.0"  # Proper Zipf distribution for validation tests
rayon = "1.10"  # Phase 0.5.2: Parallel doc-to-queries map building

# Phase 0 Week 17+: gRPC server for production deployment
# tonic 0.10 requires prost 0.12 (must match versions)
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
tracing-appender = "0.2"

# Observability: HTTP endpoints for metrics and health checks
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Configuration management: YAML/TOML parsing + env var support
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }
serde_yaml = "0.9"
toml = "0.8"
chrono = "0.4"  # ISO 8601 timestamp validation for API keys

# CLI tools: Progress bars and table formatting (optional)
indicatif = { version = "0.17", optional = true }
tabled = { version = "0.15", optional = true }
env_logger = { version = "0.11", optional = true }

# Persistence: WAL + snapshots
bincode = "1.3"
crc32fast = "1.4"
memmap2 = "0.9"

# Backup and restore: UUID for backup identifiers
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# S3 integration: AWS SDK for remote backup storage (optional, latest versions)
# Security note: aws-sigv4 (used by AWS SDK) had CVE-2023-30610 credential-exposure
# issue when TRACE logging is enabled. Use patched versions and avoid TRACE logging.
aws-config = { version = "1.8.8", optional = true }
aws-sdk-s3 = { version = "1.108.0", optional = true }

# Memory profiling: jemalloc allocator with profiling support (optional)
tikv-jemallocator = { version = "0.6", optional = true, features = ["profiling", "stats"] }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["use_std", "stats"] }

# Lock-free ring buffer: ringbuf crate (replaces custom RingBuffer)
ringbuf = "0.4"

# Disk space monitoring: platform-specific APIs
libc = "0.2"  # Unix: statvfs for disk space

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
# Phase 0 Week 1-2: Testing HNSW recall guarantees
proptest = "1.0"
tempfile = "3.8"  # For testing file persistence

# Chaos testing: Fault injection for error recovery validation
fail = "0.5"

[[bench]]
name = "hnsw_knn"
harness = false

[[bench]]
name = "learned_cache"
harness = false

[[bench]]
name = "access_logger"
harness = false

[[bench]]
name = "cache_operations"
harness = false

[[bench]]
name = "persistence"
harness = false

[dependencies.criterion]
version = "0.5"
optional = true

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[build-dependencies]
# gRPC: Protobuf compilation
tonic-build = "0.10"

[package.metadata.docs.rs]
features = ["learned-index"]
