[package]
name = "http_bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http_bench"
path = "http_bench.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"
hdrhistogram = "7"
indicatif = "0.17"
rand = "0.8"
rand_distr = "0.4"
base64 = "0.21"
